@@ -6989,6 +6989,9 @@ integer or fraction $a$ then the interval is $[a,\infty)$. If \kbd{ab} is
 a vector $[a,b]$, where \typ{INT}, \typ{FRAC} or \typ{INFINITY} are allowed
 for $a$ and $b$, the interval is $[a,b]$.
 
+\fun{long}{ZX_sturm}{GEN P} number of real roots of the non-constant
+squarefree \kbd{ZX} $P$. For efficiency, it is advised to make $P$ primitive
+first.
 
 \subsec{\kbd{ZXQ}}
 
