@@ -1,13 +1,24 @@
 Function: polrootsreal
 Section: polynomials
 C-Name: realroots
-Prototype: Gp
-Help: polrootsreal(x): real roots of the polynomial x with rational
- coefficients, using Uspensky's method.
+Prototype: GDGp
+Help: polrootsreal(x, {ab}): real roots of the polynomial x with rational
+ coefficients, using Uspensky's method. In interval ab = [a,b] if present.
 Doc: real roots of the polynomial \var{x} with rational
  coefficients, multiple roots being included only once. The roots are given
- to a relative accuracy of \kbd{realprecision}.
-
+ to a relative accuracy of \kbd{realprecision}. If argument \var{ab} is
+ present, it must be a vector $[a,b]$ with two components (of type
+ \typ{INT}, \typ{FRAC} or \typ{INFINITY}) and we restrict to roots belonging
+ to that interval.
+ \bprog
+ ? \p9
+ ? polrootsreal(x^2-2)
+ %1 = [-1.41421356, 1.41421356]~
+ ? polrootsreal(x^2-2, [1,+oo])
+ %2 = [1.41421356]~
+ ? polrootsreal(x^2-2, [2,3])
+ %3 = []~
+ @eprog\noindent
  The algorithm used is a modification of Uspensky's method (relying on
  Descartes's rule of sign), following Rouillier and Zimmerman ``Efficient
  isolation of a polynomial real roots''
