@@ -1,5 +1,10 @@
 [1.0000000000000000000000000000000000000, 2.00000000000000000000000000000000
 00000, 3.0000000000000000000000000000000000000]~
+[1.0000000000000000000000000000000000000]~
+[2.0000000000000000000000000000000000000, 3.00000000000000000000000000000000
+00000]~
+[1.0000000000000000000000000000000000000, 2.00000000000000000000000000000000
+00000, 3.0000000000000000000000000000000000000]~
 [-22.176420046821213834911725420609849287, -1.220401103882337235735459354425
 6902868]~
 [-0.98480775301220805936674302458952301367, -0.86602540378443864676372317075
@@ -21,4 +26,4 @@
   ***   at top-level: polrootsreal(Mod(1,2
   ***                 ^--------------------
   *** polrootsreal: incorrect type in realroots (t_INTMOD).
-Total time spent: 2
+Total time spent: 0
