@@ -54,6 +54,7 @@ BA 20- [libpari] New functions vecsmallpermute, vec_append
    21- GP functions qfsolve, qfparam [ adapted from Denis Simon's qfsolve.gp ]
    22- [libpari] New function ZM_transmul
    23- allow elliptic curves over number fields: ellinit([a1,...,a5], nf)
+   24- [libpari] ZX_sturm
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
@@ -69,3 +70,5 @@ BA  2- [libpari] rename RgX_mullow -> RgXn_mul, RgX_sqrlow -> RgXn_sqr,
     6- valuation(0,p), nfeltval(nf,0,pr), idealval(nf,0) now all return +oo
        poldegree(0) now returns -oo
 BA  7- rootpadicfast renamed ZpX_roots
+    8- nfinit: switch from sturm() to ZX_sturm() [Uspensky], and from polroots
+       to polrootsreal (totally real fields)
